--- a/index.html
+++ b/index.html
@@ -10,47 +10,124 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#conceptos">Conceptos Generales</a></li>
-                <li><a href="#servicios">Tipos de Servicios en la Nube</a></li>
-                <li><a href="#patrones">Patrones de Diseño</a></li>
-                <li><a href="#estandares">Estándares en Servicios</a></li>
-                <li><a href="#plataformas">Plataformas Tecnológicas</a></li>
-                <li><a href="#seguridad">Seguridad e Interoperabilidad</a></li>
+                <li><a href="conceptos_generales.html">Conceptos Generales</a></li>
+                <li><a href="tipos_servicios.html">Tipos de Servicios en la Nube</a></li>
+                <li><a href="patrones_diseno.html">Patrones de Diseño</a></li>
+                <li><a href="estandares_servicios.html">Estándares en Servicios</a></li>
+                <li><a href="plataformas_tecnologicas.html">Plataformas Tecnológicas</a></li>
+                <li><a href="seguridad_interoperabilidad.html">Seguridad e Interoperabilidad</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="hero">
             <h1>Servicios de Cómputo en la Nube</h1>
-            <p>Información y servicios para el futuro digital.</p>
+        </section>
+        <section id="menu-interno">
+            <h2>Secciones</h2>
+            <ul>
+                <li><a href="#conceptos">5.1 Conceptos Generales</a></li>
+                <li><a href="#servicios">5.2 Tipos de Servicios en la Nube</a></li>
+                <li><a href="#patrones">5.3 Patrones de Diseño</a></li>
+                <li><a href="#estandares">5.4 Estándares en Servicios</a></li>
+                <li><a href="#plataformas">5.5 Plataformas Tecnológicas</a></li>
+                <li><a href="#seguridad">5.6 Seguridad e Interoperabilidad</a></li>
+            </ul>
+        </section>
+        <section id="secciones">
+            <h2>Resumen de las secciones</h2>
+            <p>
+                (En el menú de hasta arriba viene más información)
+            </p>
         </section>
         <section id="conceptos">
-            <h2>Conceptos Generales</h2>
-            <p>Información sobre los conceptos básicos del cómputo en la nube.</p>
+            <h2>5.1 Conceptos Generales</h2>
+            <p>
+                Los servicios de cómputo en la nube representan un paradigma de 
+                entrega de recursos y servicios de TI a través de internet, 
+                ofreciendo una amplia gama de capacidades como almacenamiento, 
+                potencia de procesamiento y aplicaciones. Este enfoque permite 
+                a las organizaciones acceder a recursos informáticos bajo demanda, 
+                pagando solo por lo que utilizan y sin la necesidad de invertir en 
+                infraestructura física. Los conceptos clave incluyen la virtualización, 
+                que permite la creación de recursos computacionales virtuales a partir 
+                de infraestructura física, así como la escalabilidad y elasticidad, que 
+                permiten adaptar los recursos de acuerdo con las necesidades cambiantes.
+            </p>
         </section>
         <section id="servicios">
-            <h2>Tipos de Servicios en la Nube</h2>
-            <p>Detalles sobre los diferentes tipos de servicios disponibles en la nube.</p>
+            <h2>5.2 Tipos de Servicios en la Nube</h2>
+            <p>
+                Existen tres modelos principales de servicios en la nube: 
+                infraestructura como servicio (IaaS), plataforma como servicio 
+                (PaaS) y software como servicio (SaaS). IaaS proporciona recursos
+                computacionales virtualizados a través de internet, como servidores
+                y almacenamiento. PaaS ofrece una plataforma completa de desarrollo
+                y despliegue de aplicaciones, eliminando la necesidad de gestionar
+                la infraestructura subyacente. SaaS ofrece aplicaciones de software
+                listas para usar a través de internet, con el proveedor encargándose
+                de la gestión y mantenimiento.
+            </p>
         </section>
         <section id="patrones">
-            <h2>Patrones de Diseño</h2>
-            <p>Patrones de diseño comunes utilizados en soluciones de cómputo en la nube.</p>
+            <h2>5.3 Patrones de Diseño</h2>
+            <p>
+                Los patrones de diseño en la nube son soluciones probadas para 
+                problemas comunes en el desarrollo y la arquitectura de aplicaciones 
+                en entornos de nube. Estos incluyen patrones para la disponibilidad,
+                como la redundancia y la distribución geográfica; patrones para
+                la escalabilidad, como la fragmentación y el escalado 
+                automático; patrones para la seguridad, como el cifrado 
+                de datos y la gestión de identidad; y patrones para la 
+                eficiencia de costos, como el aprovisionamiento bajo 
+                demanda y la optimización de recursos.
+            </p>
         </section>
         <section id="estandares">
-            <h2>Estándares en Servicios</h2>
-            <p>Estándares y mejores prácticas para servicios en la nube.</p>
+            <h2>5.4 Estándares en Servicios</h2>
+            <p>
+                Los estándares en servicios de cómputo en la nube abordan 
+                aspectos como la seguridad, interoperabilidad y gestión de 
+                servicios. Esto incluye estándares como ISO 27001 para la 
+                seguridad de la información, OAuth para la autenticación de 
+                usuarios y servicios, y OpenAPI para la descripción de interfaces 
+                de servicios web. Estos estándares son fundamentales para garantizar 
+                la calidad, la compatibilidad y la seguridad de los servicios 
+                en la nube, así como para promover la interoperabilidad entre 
+                diferentes plataformas y proveedores.
+            </p>
         </section>
         <section id="plataformas">
-            <h2>Plataformas Tecnológicas</h2>
-            <p>Las principales plataformas tecnológicas para implementar soluciones en la nube.</p>
+            <h2>5.5 Plataformas Tecnológicas</h2>
+            <p>
+                Las plataformas tecnológicas en la nube, como Amazon Web Services 
+                (AWS), Microsoft Azure y Google Cloud Platform, ofrecen un conjunto 
+                completo de servicios y herramientas para desarrollar, desplegar y 
+                gestionar aplicaciones en la nube. Estas plataformas proporcionan una 
+                amplia variedad de servicios, incluyendo almacenamiento, bases de datos, 
+                análisis de datos, inteligencia artificial y machine learning, entre otros. 
+                Al elegir una plataforma tecnológica en la nube, las organizaciones deben 
+                considerar factores como la funcionalidad, la escalabilidad, la seguridad 
+                y el costo.
+            </p>
         </section>
         <section id="seguridad">
-            <h2>Seguridad e Interoperabilidad</h2>
-            <p>Medidas de seguridad y la interoperabilidad en el cómputo en la nube.</p>
+            <h2>5.6 Seguridad e Interoperabilidad</h2>
+            <p>
+                La seguridad e interoperabilidad son aspectos críticos en el entorno de 
+                la nube, especialmente debido a la naturaleza distribuida y compartida 
+                de los servicios en la nube. Las consideraciones de seguridad incluyen 
+                la gestión de identidad y acceso, el cifrado de datos, la protección 
+                contra amenazas y la conformidad con regulaciones y estándares de seguridad. 
+                Por otro lado, la interoperabilidad se refiere a la capacidad de diferentes 
+                sistemas y servicios en la nube para comunicarse y trabajar juntos de manera 
+                efectiva, lo que puede lograrse mediante estándares de interoperabilidad, 
+                API bien definidas y arquitecturas de referencia.
+            </p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Márquez Barraza Jesús David - Servicios de Cómputo en la Nube</p>
+        <p>&copy; 2024 Jesús David Márquez Barraza - Servicios de Cómputo en la Nube</p>
     </footer>
 </body>
 </html>
