Cambios finales finales

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <section id="hero">
             <h1>Servicios de Cómputo en la Nube</h1>
         </section>
+        <section id="imagen">
+            <img src="img/index.jpg" alt="Imagen sobre servicios de cómputo en la nube">
+        </section>
         <section id="menu-interno">
             <h2>Secciones</h2>
             <ul>
